--- a/Register.html
+++ b/Register.html
@@ -30,17 +30,28 @@
         <label for="username">Username</label>
         <input type="text" id="username" name="username" required />
 
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required />
+        <label for="nik">NIK</label>
+        <input type="text" id="nik" name="nik" required />
 
-        <button type="submit">Login</button>
+        <label for="Email">Email</label>
+        <input type="text" id="email" name="email" required />
+
+        <label for="alamat">Alamat</label>
+        <input type="text" id="alamat" name="alamat" required />
+
+        <label for="kota/kab">Kota/Kab</label>
+        <input type="text" id="kota/kab" name="kota/kab" required />
+
+        <button href="Login.html" type="submit">Sign Up</button>
       </form>
       <div class="login-options">
         <a href="#">Lupa Password?</a>
         <span>|</span>
-        <a href="Register.html">Daftar Baru</a>
+        <a href="#">Daftar Baru</a>
+
       </div>
     </div>
   </main>
+
 </body>
 </html>
