--- a/landingpage.html
+++ b/landingpage.html
@@ -17,39 +17,40 @@
         <li><a href="#">Beranda</a></li>
         <li><a href="#">Info</a></li>
         <li><a href="#">Jadwal</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="Login.html">Login</a></li>
       </ul>
     </nav>
   </header>
 
-  <div class="hero-image">
-    <img src="images/Background.jpg" alt="Kapal Ferry" />
+ <div class="hero-image">
+    <img src="images/Background.jpg" alt="Kapal Ferry" 
+    style="width: 100%; height: 100vh; object-fit: cover; display: block;" />
   </div>
 
   <div class="container">
     <section>
-      <h2>Tentang Kami</h2>
-      <p>Ferry Indonesia melayani perjalanan laut antar pulau dengan armada modern dan pelayanan terbaik. Kami hadir untuk memenuhi kebutuhan transportasi laut yang aman, nyaman, dan terjangkau.</p>
+      <h2>PT. DHARMA LAUTAN UTAMA</h2>
+      <p><b>PT Dharma Lautan Utama</b> adalah sebuah perusahaan yang melayani transportasi laut dan penyeberangan feri di seluruh Indonesia. 
+        Segmen pasar kami terutama dari golongan menengah kebawah, selain itu juga membawa penumpang, kargo dan kendaraan. 
+        Hal itu menyebabkan muatan di segala lini harus sesuai dengan kemampuan pengguna. 
+        Kebijakan harga kami menunjukkan kepedulian dan komitmen untuk membantu masyarakat meningkatkan taraf kesejahteraan dan memajukan pembangunan ekonomi regional selaras dengan implementasi Otonomi Regional tahun 1999.</p>
     </section>
 
     <section>
       <h2>Layanan Kami</h2>
-      <ul>
-        <li>Jadwal keberangkatan setiap hari</li>
-        <li>Rute populer: Jakarta - Surabaya, Surabaya - Makassar</li>
-        <li>Armada kapal modern dan bersertifikat</li>
-        <li>Fasilitas lengkap: kantin, hiburan, dan area istirahat</li>
-      </ul>
+        <p>Kami melayani negeri dengan memberikan pelayanan terbaik bagi para pelanggan 
+            sebagai tamu kami yang terhormat.</p>
     </section>
 
     <section>
       <h2>Cara Memesan Tiket</h2>
-      <p>Untuk memesan tiket, silakan login atau daftar akun terlebih dahulu. Setelah login, Anda dapat memilih rute, tanggal keberangkatan, dan jumlah penumpang.</p>
+      <p>Untuk memesan tiket, silakan login atau daftar akun terlebih dahulu. 
+        Setelah login, Anda dapat memilih rute, tanggal keberangkatan, dan jumlah penumpang.</p>
     </section>
   </div>
 
-  <footer>
+  <!-- <footer>
     &copy; 2025 Ferry Indonesia. All rights reserved.
-  </footer>
+  </footer> -->
 </body>
 </html>
