--- a/Login.html
+++ b/Login.html
@@ -43,4 +43,20 @@
     </div>
   </main>
 </body>
+<script>
+  document.querySelector("form").addEventListener("submit", function (e) {
+    e.preventDefault(); // Mencegah reload
+
+    const username = document.getElementById("username").value.trim();
+    const password = document.getElementById("password").value.trim();
+
+    if (username && password) {
+      // Simulasi login sukses
+      window.location.href = "Homepage.html";
+    } else {
+      alert("Silakan isi Username dan Password terlebih dahulu.");
+    }
+  });
+</script>
+
 </html>
