--- a/Struk.html
+++ b/Struk.html
@@ -18,41 +18,53 @@
   </header>
   <main>
     <section class="card">
-      <h2>DETAIL PESANAN</h2>
-      <p>BALIKPAPAN (PEL. SEMAYANG) /BPN ➝ SEMARANG (PEL. TANJUNG EMAS) /SRG</p>
+  <div class="card-header">
+    <h2>DETAIL PESANAN</h2>
+    <img src="images/new-logo.png.png" alt="Logo Ferry" class="logo-kanan">
+  </div>
 
-      <h3>DATA PEMESAN</h3>
-      <div class="pemesan-info">
-        <div class="info-left">
-          <p><strong>Nama Pemesan</strong><br>👤 Maria Susanti Watu</p>
-        </div>
-        <div class="info-right">
-          <p>📞 0821xxxx<br>✉️ mariaXXX@gmail.com</p>
-        </div>
-      </div>
+  <hr>
 
-      <table>
-        <thead>
-          <tr>
-            <th>No.</th>
-            <th>Nama</th>
-            <th>Kursi</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Maria Susanti Watu</td>
-            <td>7</td>
-          </tr>
-        </tbody>
-      </table>
+  <p>BALIKPAPAN (PEL. SEMAYANG) /BPN ➝ SEMARANG (PEL. TANJUNG EMAS) /SRG</p>
 
-      <div class="harga">
-        <p>Harga Tiket <span>Rp. 350.000</span></p>
-        <p>Jumlah Penumpang <span>X 1</span></p>
-        <p class="total">Total Harga <span>Rp. 350.000</span></p>
-      </div>
+  <hr>
+
+  <h3>DATA PEMESAN</h3>
+  <div class="pemesan-info">
+    <div class="info-left">
+      <p><strong>Nama Pemesan</strong><br>👤 Maria Susanti Watu</p>
+    </div>
+    <div class="info-right">
+      <p>📞 0821xxxx<br>✉️ mariaXXX@gmail.com</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <table>
+    <thead>
+      <tr>
+        <th>No.</th>
+        <th>Nama</th>
+        <th>Kursi</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Maria Susanti Watu</td>
+        <td>7</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <hr>
+
+  <div class="harga">
+    <p>Harga Tiket <span>Rp. 350.000</span></p>
+    <p>Jumlah Penumpang <span>X 1</span></p>
+    <p class="total">Total Harga <span>Rp. 350.000</span></p>
+  </div>
       <a class="btn-lanjut" href="Homepage.html">Kembali ke halaman utama</a>
     </section>
   </main>
